Automatically backed up by Learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,4 @@
 <h1>Welcome!</h1>
 <h2>If you tell me your name, I can say hi!</h2>
 <form action="/" method="POST"/>
+  <input type="text" name="Name"
