--- a/views/index.erb
+++ b/views/index.erb
@@ -2,4 +2,5 @@
 <h2>If you tell me your name, I can say hi!</h2>
 <form action="/" method="POST"/>
   <input type="text" name="Name" id="name">
+  <input type="submit">
 </form>
