--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 <h1>Welcome!</h1>
 <h2>If you tell me your name, I can say hi!</h2>
-<form action="/" method="POST"/>
+<form action="/" method="POST">
   <input type="text" name="Name" id="name"/>
   <input type="submit"/>
 </form>
