Automatically backed up by Learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,6 +2,6 @@
 <h2>If you tell me your name, I can say hi!</h2>
 <form action="/greet" method="POST">
   <label for="user_name">Name:</label>
-  <input type="text" name="user_name" id="user_name"/>
+  <p><input type="text" name="user_name" id="user_name"/></p>
   <input type="submit"/>
 </form>
