--- a/views/index.erb
+++ b/views/index.erb
@@ -3,5 +3,6 @@
 <form action="/greet" method="POST">
   <label for="user_name">Name:</label>
   <p><input type="text" name="user_name" id="user_name"/></p>
-  <input type="submit"/>
+  
+  <input type="submit" value="Submit"/>
 </form>
